# parallel-mbe-mce

./: .gitignore
parallel/: BipartiteGraph.cpp  BipartiteGraph.h  CMakeLists.txt  CliqueEnum.cpp  CliqueEnum.h  GMBE.cpp  GMBE.h  PLAIN_medium_03-em.txt  PLAIN_medium_03-mapped.txt  PLAIN_small_01-em.txt  PLAIN_small_01-mapped-undirected.txt  PLAIN_small_01-mapped.txt  ParLmbc.cpp  ParLmbc.h  UP-domino-em.txt  UP-domino-mapped-undirected.txt  UP-domino-mapped.txt  UP-emea-em.txt  UP-emea-mapped.txt  UndirectedGraph.cpp  UndirectedGraph.h  Vertex.cpp  Vertex.h  iMBEA.cpp  iMBEA.h  input_graph.txt  irreducible-em.txt  irreducible-mapped-undirected.txt  irreducible-mapped.txt  large_04-em.txt  large_04-mapped.txt  large_04-undirected.txt  mailer-em.txt  mailer-mapped.txt  mailer-undirected.txt  main.cpp  matrixMul  matrixMul.cu  matrixMul.cuh  small_01-em.txt  (+6 more)
parallel/cuda/: Graph.cpp  Graph.h  bfsCUDA.cu  bfsCUDA.cuh  mat  mat.cu  mat.cuh  run.cpp
